Closed
Bug 365001
Opened 19 years ago
Closed 19 years ago
dotted/dashed border on tall page causes overflow
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
People
(Reporter: cbook, Assigned: vlad)
References
()
Details
(Keywords: regression, testcase)
Attachments
(4 files)
On Trunk Builds i see a broken Layout on the Text on http://meta.wikimedia.org/wiki/IRC_channel_quotes
(see following screenshot)
The Text is covered with a kind of blue lines. Its not every time on the same point on this page.
The Error Console shows only :
Warning: Unknown property 'text-size'. Declaration dropped.
Source File: http://meta.wikimedia.org/wiki/IRC_channel_quotes
Line: 0
I was currently not able to find a regression range, but it seems this regressed since a long time ago.
Also works on 1509 and Firefox 2001 but failed on Trunk Builds on Windows and Linux.
| Reporter | ||
Comment 1•19 years ago
|
||
Comment 2•19 years ago
|
||
This regressed between 2006-02-22 and 2006-02-25, that was the time when cairo was turned on on windows (bug 323923),so I think this is a gfx->thebes bug.
Component: Layout: View Rendering → GFX: Thebes
Flags: blocking1.9?
Comment 3•19 years ago
|
||
When the page has finished scrolling to the bottom, the entire page is covered with the red dots of the border, which should not happen.
Comment 4•19 years ago
|
||
Comment 5•19 years ago
|
||
This is basically a duplicate of bug 335107, but that bug is supposedly fixed. However, I can still see the bug with current trunk builds, so this is obviously not fixed.
Comment 6•19 years ago
|
||
Basically a duplicate of bug 301637 but the regression range is too recent so I'm a bit suspicious.
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → vladimir
Flags: blocking1.9? → blocking1.9+
| Assignee | ||
Updated•19 years ago
|
Summary: Layout broken on http://meta.wikimedia.org/wiki/IRC_channel_quotes → dotted/dashed border on tall page causes overflow
| Assignee | ||
Comment 7•19 years ago
|
||
One of these days, we'll be able to kill ConditionRect!
Attachment #252842 -
Flags: review?(pavlov)
Updated•19 years ago
|
Attachment #252842 -
Flags: review?(pavlov) → review+
| Assignee | ||
Updated•19 years ago
|
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•