b=365001 - dotted/dashed border on tall page causes rect leakage, r=stuart